--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -27,8 +27,8 @@
 									<td><%= link_to client do %><%= client.name %><% end %></td>
 									<td class="hidden-xs"><%= client.contact %></td>
 									<td class="hidden-xs"><%= link_to client.site_url do %><%= client.site_url %><% end %></td>
-									<td class="text-right hidden-xs"><% if Invoice.where(:client_id => client.id, :paid=> false).sum('cost') > 0 %><span class="spread red"><%= number_to_currency(Invoice.where(:client_id => client.id, :paid=> false).sum('cost'), { :negative_format => '(%n)' }) %></span><% else %>&mdash;<% end %></td>
-									<td class="text-right"><%= number_to_currency(Invoice.where(:client_id => client.id).sum('cost'), { :negative_format => '(%n)' }) %></td>
+									<td class="text-right hidden-xs"><% if client.unpaidTotal > 0 %><span class="spread red"><%= number_to_currency(client.unpaidTotal, { :negative_format => '(%n)' }) %></span><% else %>&mdash;<% end %></td>
+									<td class="text-right"><%= number_to_currency(client.invoiceTotal, { :negative_format => '(%n)' }) %></td>
 								</tr>
 								<% end %>
 							</tbody>
