--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,7 +1,4 @@
 <% provide(:title, "Client ##{@client.id} | ") %>
-<%
-	clientInvoiceTotal = 0
-%>
 <section id="client-show">
 	<div class="container">
 		<div class="row">
@@ -96,14 +93,14 @@
 						<tr id="invoicerow<%= invoice.id %>">
 							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
 							<td class="text-center hidden-xs"><%= invoice.worktype %></td>
-							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% clientInvoiceTotal += invoice.cost else %>&mdash;<% end %></td>
+							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
 							<td class="text-center"><% if invoice.paid == true %><i class="fa fa-check green"></i><% else %><span class="spread red">Not Paid</span><% end %></td>
 						</tr>
 						<% end %>
 						<tr>
 							<td>&nbsp;</td>
 							<td class="text-center"><strong>Total</strong></td>
-							<td class="text-right"><strong><%= number_to_currency(clientInvoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+							<td class="text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
 							<td>&nbsp;</td>
 						</tr>
 					</tbody>
