--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,14 +1,10 @@
 <% provide(:title, "Project ##{@project.id} | ") %>
-<%
-	thisClient = Client.find(@project.client_id)
-	projectInvoiceTotal = 0
-%>
 <section id="project-show">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<% if !thisClient.logo.blank? %>
-				<%= image_tag(thisClient.logo.url(:medium), class: 'pull-right hidden-xs') %>
+				<% if !@project.client.logo.blank? %>
+				<%= image_tag(@project.client.logo.url(:medium), class: 'pull-right hidden-xs') %>
 				<% end %>
 				<h1><%= @project.name %></h1>
 				<p class="doicons">
@@ -20,7 +16,7 @@
 				</p>
 				<p>
 					<strong>Client:</strong>
-					<%= link_to thisClient do %><%= thisClient.name %><% end %>
+					<%= link_to @project.client do %><%= @project.client.name %><% end %>
 				</p>
 				<p>
 					<strong>Completed?:</strong>
@@ -58,13 +54,13 @@
 						<% @invoices.each do |invoice| %>
 						<tr id="invoicerow<%= invoice.id %>">
 							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% projectInvoiceTotal += invoice.cost else %>&mdash;<% end %></td>
+							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
 							<td class="text-center"><% if invoice.paid == true %><i class="fa fa-check green"></i><% else %><span class="spread red">Not Paid</span><% end %></td>
 						</tr>
 						<% end %>
 						<tr>
 							<td class="text-right"><strong>Total</strong></td>
-							<td class="text-right"><strong><%= number_to_currency(projectInvoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+							<td class="text-right"><strong><%= number_to_currency(@project.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
 							<td>&nbsp;</td>
 						</tr>
 					</tbody>
