--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,6 @@
 /*
- *= require bootstrap.min
- *= require font-awesome.min
+ *= require bootstrap
+ *= require font-awesome
  *= require datepicker
  *= require style
 */
