--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
-<header class="pad">
+<header>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 text-center">
+			<div class="col-sm-6 col-sm-offset-3 text-center">
 				<a href="/"><img src="<%= company_text_logo_alt_url %>" alt="<%= company_full_name %>"></a>
 			</div>
 		</div>
