--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= company_abbrv_name %> Biz Admin</title>
-  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+  <%= wicked_pdf_stylesheet_link_tag "application", media: "all" %>
   <%= wicked_pdf_stylesheet_link_tag "font-awesome.min" %>
   <%= wicked_pdf_stylesheet_link_tag "bootstrap.min" %>
   <%= wicked_pdf_stylesheet_link_tag "style" %>
