--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -122,7 +122,7 @@ jQuery(document).ready(function($) {
 				fillColor: 'rgba(92,184,92,0.5)',
 				strokeColor: 'rgba(92,184,92,0.5)',
 				pointColor: 'rgba(92,184,92,0.8)',
-				data: [<% (1..12).each do |month| %><%= Invoice.paidByYear(@year.year).paidByMonth(month).sum('cost') %>,<% end %>]
+				data: [<% (1..12).each do |month| %><%= Invoice.paidByMonth(Date.new(@year.year, month, 1)).sum('cost') %>,<% end %>]
 			}
 		]
 	};
