--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -48,13 +48,6 @@ jQuery(document).ready(function($) {
     labels: [<% monthsBack.downto(0).each do |m| %>'<%= m.month.ago.strftime("%B") %>',<% end %>],
     datasets: [
       {
-        label: 'Total',
-				fillColor: 'rgba(92,184,92,0.5)',
-				strokeColor: 'rgba(92,184,92,0.5)',
-				pointColor: 'rgba(92,184,92,0.8)',
-        data: [<% monthsBack.downto(0).each do |m| %><%= Invoice.paidByMonth(m.month.ago).sum('cost') %>,<% end %>]
-      },
-      {
 				label: 'Hourly',
 				fillColor: 'rgba(138,109,59,0.5)',
 				strokeColor: 'rgba(138,109,59,0.5)',
@@ -78,8 +71,7 @@ jQuery(document).ready(function($) {
     ]
 	};
 	var ctx = document.getElementById('monthlyRevenueChart').getContext('2d');
-	var monthlyRevenueChart = new Chart(ctx).Line(data, {
-		bezierCurve: false
+	var monthlyRevenueChart = new Chart(ctx).StackedBar(data, {
 	});
 });
 </script>
